; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/extr_nf_log.c_nf_logger_put.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/extr_nf_log.c_nf_logger_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nf_logger = type { i32 }

@NFPROTO_INET = common dso_local global i32 0, align 4
@NFPROTO_IPV4 = common dso_local global i32 0, align 4
@NFPROTO_IPV6 = common dso_local global i32 0, align 4
@loggers = common dso_local global i32*** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nf_logger_put(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.nf_logger*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @NFPROTO_INET, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load i32, i32* @NFPROTO_IPV4, align 4
  %11 = load i32, i32* %4, align 4
  call void @nf_logger_put(i32 %10, i32 %11)
  %12 = load i32, i32* @NFPROTO_IPV6, align 4
  %13 = load i32, i32* %4, align 4
  call void @nf_logger_put(i32 %12, i32 %13)
  br label %43

14:                                               ; preds = %2
  %15 = load i32***, i32**** @loggers, align 8
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32**, i32*** %15, i64 %17
  %19 = load i32**, i32*** %18, align 8
  %20 = load i32, i32* %4, align 4
  %21 = zext i32 %20 to i64
  %22 = getelementptr inbounds i32*, i32** %19, i64 %21
  %23 = load i32*, i32** %22, align 8
  %24 = icmp eq i32* %23, null
  %25 = zext i1 %24 to i32
  %26 = call i32 @BUG_ON(i32 %25)
  %27 = call i32 (...) @rcu_read_lock()
  %28 = load i32***, i32**** @loggers, align 8
  %29 = load i32, i32* %3, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32**, i32*** %28, i64 %30
  %32 = load i32**, i32*** %31, align 8
  %33 = load i32, i32* %4, align 4
  %34 = zext i32 %33 to i64
  %35 = getelementptr inbounds i32*, i32** %32, i64 %34
  %36 = load i32*, i32** %35, align 8
  %37 = call %struct.nf_logger* @rcu_dereference(i32* %36)
  store %struct.nf_logger* %37, %struct.nf_logger** %5, align 8
  %38 = load %struct.nf_logger*, %struct.nf_logger** %5, align 8
  %39 = getelementptr inbounds %struct.nf_logger, %struct.nf_logger* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @module_put(i32 %40)
  %42 = call i32 (...) @rcu_read_unlock()
  br label %43

43:                                               ; preds = %14, %9
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @rcu_read_lock(...) #1

declare dso_local %struct.nf_logger* @rcu_dereference(i32*) #1

declare dso_local i32 @module_put(i32) #1

declare dso_local i32 @rcu_read_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
